--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --flake8 --cov=. tests/ --cov-report html --cov-report term
+addopts = --flake8 --cov=. tests/ --cov-report html:cov --cov-report xml:cov/coverage.xml --cov-report term --junit-xml=cov/report.xml
 pep8maxlinelength = 120
